OpenJMLTest/testfiles/racold/expected-compile
testfiles\racold\ArrayExample.java:10: error: A \result expression is not allowed in an old environment
    //@ ensures \old(someArray[\result]) == 4;
                               ^
testfiles\racold\ArrayExample.java:11: error: A \result expression is not allowed in an old environment
    //@ ensures \old(someArray[\result] + 2) == 6;
                               ^
testfiles\racold\ArrayExample.java:12: error: A \result expression is not allowed in an old environment
    //@ ensures \old(someArray[\result])+ 2 == 6;
                               ^
3 errors
